re PR target/11476 ([3.4 only] [arc-elf] gcc ICE on newlib's vfprintf.c)

2004-09-11  Ramana Radhakrishnan <ramana.radhakrishnan@codito.com>

        PR target/11476
        * gcc/config/arc/arc.c (arc_va_args): Call build1 instead
        of build for unary tree operators.

From-SVN: r87372